// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AIに渡す入力のSnapshot > ユーザーメッセージも固定される 1`] = `
"以下は集計済みの売上データです。

{
  "period": {
    "from": "2025-09",
    "to": "2025-11"
  },
  "monthly": [
    {
      "month": "2025-09",
      "revenue": 148400,
      "grossProfit": 93400,
      "repeatRatePercent": 0,
      "revenueChangePercent": null,
      "grossProfitChangePercent": null,
      "repeatRateChangePoint": null
    },
    {
      "month": "2025-10",
      "revenue": 147500,
      "grossProfit": 92600,
      "repeatRatePercent": 38.5,
      "revenueChangePercent": -0.6,
      "grossProfitChangePercent": -0.9,
      "repeatRateChangePoint": 38.5
    },
    {
      "month": "2025-11",
      "revenue": 264700,
      "grossProfit": 163100,
      "repeatRatePercent": 46.7,
      "revenueChangePercent": 79.5,
      "grossProfitChangePercent": 76.1,
      "repeatRateChangePoint": 8.2
    }
  ],
  "overall": {
    "revenue": 560600,
    "grossProfit": 349100,
    "repeatRatePercent": 28.6,
    "customerCount": 28,
    "repeatCustomerCount": 8
  },
  "categories": [
    {
      "category": "アウター",
      "revenue": 287400
    },
    {
      "category": "トップス",
      "revenue": 114400
    },
    {
      "category": "ボトムス",
      "revenue": 82200
    },
    {
      "category": "アクセサリー",
      "revenue": 76600
    }
  ],
  "skuRankingByRevenue": [
    {
      "productName": "ウールコート",
      "sku": "LUM-OUT-01",
      "revenue": 148800,
      "quantity": 6
    },
    {
      "productName": "ダウンジャケット",
      "sku": "LUM-OUT-02",
      "revenue": 138600,
      "quantity": 7
    },
    {
      "productName": "リネンブラウス",
      "sku": "LUM-TOP-02",
      "revenue": 61200,
      "quantity": 9
    },
    {
      "productName": "テーパードパンツ",
      "sku": "LUM-BTM-01",
      "revenue": 53400,
      "quantity": 6
    },
    {
      "productName": "オーガニックコットンTシャツ",
      "sku": "LUM-TOP-01",
      "revenue": 53200,
      "quantity": 14
    },
    {
      "productName": "シルクスカーフ",
      "sku": "LUM-ACC-02",
      "revenue": 40600,
      "quantity": 7
    },
    {
      "productName": "レザーベルト",
      "sku": "LUM-ACC-01",
      "revenue": 36000,
      "quantity": 8
    },
    {
      "productName": "フレアスカート",
      "sku": "LUM-BTM-02",
      "revenue": 28800,
      "quantity": 4
    }
  ]
}"
`;

exports[`AIに渡す入力のSnapshot > 集計結果からプロンプト入力が決まる 1`] = `
{
  "categories": [
    {
      "category": "アウター",
      "revenue": 287400,
    },
    {
      "category": "トップス",
      "revenue": 114400,
    },
    {
      "category": "ボトムス",
      "revenue": 82200,
    },
    {
      "category": "アクセサリー",
      "revenue": 76600,
    },
  ],
  "monthly": [
    {
      "grossProfit": 93400,
      "grossProfitChangePercent": null,
      "month": "2025-09",
      "repeatRateChangePoint": null,
      "repeatRatePercent": 0,
      "revenue": 148400,
      "revenueChangePercent": null,
    },
    {
      "grossProfit": 92600,
      "grossProfitChangePercent": -0.9,
      "month": "2025-10",
      "repeatRateChangePoint": 38.5,
      "repeatRatePercent": 38.5,
      "revenue": 147500,
      "revenueChangePercent": -0.6,
    },
    {
      "grossProfit": 163100,
      "grossProfitChangePercent": 76.1,
      "month": "2025-11",
      "repeatRateChangePoint": 8.2,
      "repeatRatePercent": 46.7,
      "revenue": 264700,
      "revenueChangePercent": 79.5,
    },
  ],
  "overall": {
    "customerCount": 28,
    "grossProfit": 349100,
    "repeatCustomerCount": 8,
    "repeatRatePercent": 28.6,
    "revenue": 560600,
  },
  "period": {
    "from": "2025-09",
    "to": "2025-11",
  },
  "skuRankingByRevenue": [
    {
      "productName": "ウールコート",
      "quantity": 6,
      "revenue": 148800,
      "sku": "LUM-OUT-01",
    },
    {
      "productName": "ダウンジャケット",
      "quantity": 7,
      "revenue": 138600,
      "sku": "LUM-OUT-02",
    },
    {
      "productName": "リネンブラウス",
      "quantity": 9,
      "revenue": 61200,
      "sku": "LUM-TOP-02",
    },
    {
      "productName": "テーパードパンツ",
      "quantity": 6,
      "revenue": 53400,
      "sku": "LUM-BTM-01",
    },
    {
      "productName": "オーガニックコットンTシャツ",
      "quantity": 14,
      "revenue": 53200,
      "sku": "LUM-TOP-01",
    },
    {
      "productName": "シルクスカーフ",
      "quantity": 7,
      "revenue": 40600,
      "sku": "LUM-ACC-02",
    },
    {
      "productName": "レザーベルト",
      "quantity": 8,
      "revenue": 36000,
      "sku": "LUM-ACC-01",
    },
    {
      "productName": "フレアスカート",
      "quantity": 4,
      "revenue": 28800,
      "sku": "LUM-BTM-02",
    },
  ],
}
`;
